--- a/Kindergarten/src/composer.json
+++ b/Kindergarten/src/composer.json
@@ -19,7 +19,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-		"kartik-v/yii2-tabs-x": "@dev"
+        "kartik-v/yii2-tabs-x": "^1.2"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
